Optimisation verif token
